--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
             </form>
           </div>
         </div>
+        <div class="row" id="divInfo" style="display:none;">
+          <div class="col-12">
+            <div class="form">
+              <div class="form-group">
+                <label for="txtMejorCalificacion" class="h3">Mejor Calificación:</label>
+                <h4 id="txtMejorCalificacion"></h4>
+              </div>
+              <div class="form-group">
+                <label for="txtPeorCalificacion" class="h3">Peor Calificación:</label>
+                <h4 id="txtPeorCalificacion"></h4>
+              </div>
+              <div class="form-group">
+                <label for="txtPromedio" class="h3">Calificación promedio:</label>
+                <h4 id="txtPromedio"></h4>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="row mt-2">
             <div class="col-12">
                 <canvas id="cvGrafica"></canvas>
