--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                   <h1>
                     Bienvenido
                   </h1>
+                  <label class="h6" id="txtClima"></label>
                 </div>
               </div>
         </div>
@@ -49,6 +50,27 @@
             <div class="col-12">
                 <canvas id="cvGrafica"></canvas>
             </div>
+        </div>
+        <div class="row" id="divTabla" style="display:none;">
+          <div class="col-12">
+            <table class="table" id="tabla">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Nombres</th>
+                  <th scope="col">Apellido Materno</th>
+                  <th scope="col">Apellido Paterno</th>
+                  <th scope="col">Fecha de Nacimiento</th>
+                  <th scope="col">Grado</th>
+                  <th scope="col">Grupo</th>
+                  <th scope="col">Calificación</th>
+                  <th scope="col">Clave Usuario</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
 
